# snakeRebuild

./: .gitignore  CMakeLists.txt  CMakeLists_clion.txt  README.md  [[discard]]ancillarycat.console.ixx  [[discard]]ancillarycat.impl.console.ixx  [[discarded]]ancillarycat.print.ixx  ancilarycat.game.ixx  ancillarycat.ansi.ixx  ancillarycat.config.ixx  ancillarycat.console.cpp  ancillarycat.console.ixx  ancillarycat.cursor.ixx  ancillarycat.entities.ixx  ancillarycat.entity.cpp  ancillarycat.entity.ixx  ancillarycat.food.ixx  ancillarycat.game.cpp  ancillarycat.game.ixx  ancillarycat.generator.ixx  ancillarycat.handler.ixx  ancillarycat.impl.console.ixx  ancillarycat.impl.entity.ixx  ancillarycat.leaderboard.ixx  ancillarycat.panel.ixx  ancillarycat.print.ixx  ancillarycat.snake.ixx  ancillarycat.utils  ancillarycat.utils.ixx  ancillarycat.windows.api.ixx  bootstrap.ps1  config.hpp  core.hpp  cpp.hint  leaderboard.snake  limits.hpp  realMain.cpp  snakeRebuild.cpp  snakeRebuild.sln  snakeRebuild.vcxproj  (+3 more)
include/: config.hpp  core.hpp  limits.hpp
module/: ancillarycat.api.ixx  ancillarycat.blocks.block.ixx  ancillarycat.blocks.ixx  ancillarycat.blocks.obstacle.ixx  ancillarycat.console.console.ixx  ancillarycat.console.ixx  ancillarycat.entities.entity.ixx  ancillarycat.entities.food.ixx  ancillarycat.entities.ixx  ancillarycat.entities.snake.ixx  ancillarycat.entity.ixx  ancillarycat.game.ixx  ancillarycat.generator.ixx  ancillarycat.handler.ixx  ancillarycat.leaderboard.ixx  ancillarycat.panel.ixx  ancillarycat.snake.ixx  ancillarycat.utils.ixx  ancillarycat.windows.api.ixx  discard ancillarycat.panel.ixx
src/: ancillarycat.ansi.ixx  ancillarycat.api.ansi.ixx  ancillarycat.api.generator.ixx  ancillarycat.api.windows.ixx  ancillarycat.console.console.cpp  ancillarycat.console.cpp  ancillarycat.console.point.ixx  ancillarycat.entities.entity.cpp  ancillarycat.entity.cpp  ancillarycat.game.config.ixx  ancillarycat.game.cpp  ancillarycat.game.game.ixx  ancillarycat.game.leaderboard.ixx  ancillarycat.handler.cpp  ancillarycat.leaderboard.ixx  ancillarycat.utils.cpp  ancillarycat.windows.api.ixx  realMain.cpp
